dependency updates; use java 17